syntax = "proto3";

package testing.basicserverstreaming;

option php_namespace = "Testing\\BasicServerStreaming";

import "google/api/client.proto";
import "google/api/field_behavior.proto";

service BasicServerStreaming {
  option (google.api.default_host) = "serverstreaming.example.com";
  option (google.api.oauth_scopes) = "scope1,scope2";

  rpc MethodServer(Request) returns(stream Response);
}

message Request {
    int32 a_number = 1 [(google.api.field_behavior) = REQUIRED];
}

message Response {
}
